<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_exchange"
        android:enabled="true"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/exchange"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_analysis"
        android:enabled="true"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/analysis"
        app:showAsAction="ifRoom" />
</menu>
