<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.transactionHistory.HistoryFilterFragment">

    <Button
        android:id="@+id/allTimeFilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/weekFilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week"
        app:layout_constraintEnd_toStartOf="@id/monthFilterButton"
        app:layout_constraintStart_toEndOf="@id/allTimeFilterButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/monthFilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/fromDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_date"
        app:layout_constraintEnd_toStartOf="@id/weekFilterButton"
        app:layout_constraintStart_toEndOf="@id/allTimeFilterButton"
        app:layout_constraintTop_toBottomOf="@id/allTimeFilterButton" />

    <Button
        android:id="@+id/toDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_date"
        app:layout_constraintEnd_toStartOf="@id/monthFilterButton"
        app:layout_constraintStart_toEndOf="@id/weekFilterButton"
        app:layout_constraintTop_toBottomOf="@id/allTimeFilterButton" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listOfCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toDateButton"
        app:layout_constraintTop_toBottomOf="@id/fromDateButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
