<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.currencyExchange.CurrencyExchangeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/grey"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            tools:text="Last data: 2017-10-12" />

        <TextView
            android:id="@+id/firstCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:gravity="center"
            tools:text="USD" />

        <EditText
            android:id="@+id/firstCurrencyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="16dp"
            android:inputType="numberDecimal"
            android:text="@string/initial_first_currency_value" />

        <TextView
            android:id="@+id/secondCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            tools:text="RUB" />

        <EditText
            android:id="@+id/secondCurrencyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="16dp"
            android:hint="@string/currency_hint"
            android:inputType="numberDecimal" />

        <ImageView
            android:id="@+id/swapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/swap_button_description"
            android:focusable="true"
            android:src="@drawable/ic_swap_horiz_black_24px" />
    </FrameLayout>

    <Button
        android:id="@+id/exchangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exchange" />

</FrameLayout>
